# Bot_BDE

./: .excalidraw  norme.md  pyproject.toml
src/core/: config.py  logger.py  main.py
